calling recipes via ui seems to work.